--- a/OneMainWeb/packages.config
+++ b/OneMainWeb/packages.config
@@ -4,6 +4,8 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="BundleTransformer.Core" version="1.9.13" targetFramework="net45" />
   <package id="BundleTransformer.SassAndScss" version="1.9.13" targetFramework="net45" />
+  <package id="BundleTransformer.Yui" version="1.9.15" targetFramework="net45" />
+  <package id="EcmaScript.Net" version="1.0.1.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.2" targetFramework="net45" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.10.4" targetFramework="net45" />
@@ -27,4 +29,5 @@
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="UrlRewritingNet" version="2.0.6.1" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
+  <package id="YUICompressor.NET" version="2.5.0.0" targetFramework="net45" />
 </packages>
