--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -15,7 +15,8 @@
     <sectionGroup name="bundleTransformer">
       <section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" />
       <section name="sassAndScss" type="BundleTransformer.SassAndScss.Configuration.SassAndScssSettings, BundleTransformer.SassAndScss" />
-    <section name="yui" type="BundleTransformer.Yui.Configuration.YuiSettings, BundleTransformer.Yui" /></sectionGroup>
+      <section name="yui" type="BundleTransformer.Yui.Configuration.YuiSettings, BundleTransformer.Yui" />
+    </sectionGroup>
   </configSections>
   <rssConfiguration>
     <providers>
@@ -93,7 +94,7 @@
       <error statusCode="404" redirect="~/site_specific/filenotfound.htm" />
       <error statusCode="403" redirect="~/site_specific/authorizationfailed.htm" />
     </customErrors>
-    <compilation debug="false">
+    <compilation debug="true">
       <assemblies>
         <add assembly="System.Design, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
       </assemblies>
@@ -258,7 +259,8 @@
         </translators>
         <minifiers>
           <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
-        <add name="YuiJsMinifier" type="BundleTransformer.Yui.Minifiers.YuiJsMinifier, BundleTransformer.Yui" /></minifiers>
+          <add name="YuiJsMinifier" type="BundleTransformer.Yui.Minifiers.YuiJsMinifier, BundleTransformer.Yui" />
+        </minifiers>
         <fileExtensions>
           <add fileExtension=".js" assetTypeCode="JavaScript" />
         </fileExtensions>
