--- a/OneMainWeb/packages.config
+++ b/OneMainWeb/packages.config
@@ -5,6 +5,7 @@
   <package id="BundleTransformer.Core" version="1.9.13" targetFramework="net45" />
   <package id="BundleTransformer.SassAndScss" version="1.9.13" targetFramework="net45" />
   <package id="BundleTransformer.Yui" version="1.9.15" targetFramework="net45" />
+  <package id="dropzone" version="3.10.2" targetFramework="net45" />
   <package id="EcmaScript.Net" version="1.0.1.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.2" targetFramework="net45" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
