--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -470,10 +470,11 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="adm\Forms.aspx" />
+    <Content Include="adm\images\drag.png" />
     <Content Include="adm\js\bootstrap-treeview.js" />
     <Content Include="adm\js\bootstrap.min.js" />
     <Content Include="adm\js\jquery.details.js" />
-    <Content Include="adm\js\jquery.ui.datepicker-sl.js" />
+    <Content Include="adm\js\jquery.ui.datepicker-en.js" />
     <Content Include="adm\js\One.js" />
     <Content Include="adm\Publish.aspx" />
     <Content Include="adm\Regulars.aspx" />
@@ -791,6 +792,7 @@
     </Content>
     <Content Include="adm\ExcelExport.ashx" />
     <Content Include="adm\Icons.ashx" />
+    <Content Include="adm\images\web.config" />
     <None Include="BundleTransformer.Configuration.xsd">
       <SubType>Designer</SubType>
     </None>
