--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -14,8 +14,8 @@
     </sectionGroup>
     
   <sectionGroup name="bundleTransformer">
-			<section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" />
-		<section name="yui" type="BundleTransformer.Yui.Configuration.YuiSettings, BundleTransformer.Yui" /><section name="sassAndScss" type="BundleTransformer.SassAndScss.Configuration.SassAndScssSettings, BundleTransformer.SassAndScss" /></sectionGroup></configSections>
+			
+		<section name="yui" type="BundleTransformer.Yui.Configuration.YuiSettings, BundleTransformer.Yui" /><section name="sassAndScss" type="BundleTransformer.SassAndScss.Configuration.SassAndScssSettings, BundleTransformer.SassAndScss" /><section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" /></sectionGroup><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <rssConfiguration>
     <providers>
       <add name="Articles" type="One.Net.BLL.RSSProviderSQL" listItemsMethod="[dbo].[ListArticlesForRss]" listCategoriesMethod="[dbo].[ListArticleCategoriesForRss]" connectionString="MsSqlConnectionString" />
@@ -239,24 +239,24 @@
         
         
         
-      <translators>
-					<add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
-				<add name="SassAndScssTranslator" type="BundleTransformer.SassAndScss.Translators.SassAndScssTranslator, BundleTransformer.SassAndScss" /></translators><postProcessors>
+      <minifiers>
+					
+				<add name="YuiCssMinifier" type="BundleTransformer.Yui.Minifiers.YuiCssMinifier, BundleTransformer.Yui" /><add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" /></minifiers><translators>
+					
+				<add name="SassAndScssTranslator" type="BundleTransformer.SassAndScss.Translators.SassAndScssTranslator, BundleTransformer.SassAndScss" /><add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" /></translators><fileExtensions>
+					
+				<add fileExtension=".sass" assetTypeCode="Sass" /><add fileExtension=".scss" assetTypeCode="Scss" /><add fileExtension=".css" assetTypeCode="Css" /></fileExtensions><postProcessors>
 					<add name="UrlRewritingCssPostProcessor" type="BundleTransformer.Core.PostProcessors.UrlRewritingCssPostProcessor, BundleTransformer.Core" useInDebugMode="false" />
-				</postProcessors><minifiers>
-					<add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
-				<add name="YuiCssMinifier" type="BundleTransformer.Yui.Minifiers.YuiCssMinifier, BundleTransformer.Yui" /></minifiers><fileExtensions>
-					<add fileExtension=".css" assetTypeCode="Css" />
-				<add fileExtension=".sass" assetTypeCode="Sass" /><add fileExtension=".scss" assetTypeCode="Scss" /></fileExtensions></css>
+				</postProcessors></css>
       <js defaultMinifier="YuiJsMinifier">
         
         
         
-      <translators>
+      <minifiers>
+					
+				<add name="YuiJsMinifier" type="BundleTransformer.Yui.Minifiers.YuiJsMinifier, BundleTransformer.Yui" /><add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" /></minifiers><translators>
 					<add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
-				</translators><minifiers>
-					<add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
-				<add name="YuiJsMinifier" type="BundleTransformer.Yui.Minifiers.YuiJsMinifier, BundleTransformer.Yui" /></minifiers><fileExtensions>
+				</translators><fileExtensions>
 					<add fileExtension=".js" assetTypeCode="JavaScript" />
 				</fileExtensions></js>
     </core>
