--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -15,7 +15,7 @@
     
   <sectionGroup name="bundleTransformer">
 			
-		<section name="yui" type="BundleTransformer.Yui.Configuration.YuiSettings, BundleTransformer.Yui" /><section name="sassAndScss" type="BundleTransformer.SassAndScss.Configuration.SassAndScssSettings, BundleTransformer.SassAndScss" /><section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" /></sectionGroup><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+		<section name="yui" type="BundleTransformer.Yui.Configuration.YuiSettings, BundleTransformer.Yui" /><section name="sassAndScss" type="BundleTransformer.SassAndScss.Configuration.SassAndScssSettings, BundleTransformer.SassAndScss" /><section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" /></sectionGroup><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <rssConfiguration>
     <providers>
       <add name="Articles" type="One.Net.BLL.RSSProviderSQL" listItemsMethod="[dbo].[ListArticlesForRss]" listCategoriesMethod="[dbo].[ListArticleCategoriesForRss]" connectionString="MsSqlConnectionString" />
@@ -53,7 +53,8 @@
     <add name="DefaultConnection" connectionString="server=tartar.netinet.si;uid=auth;pwd=auth;database=universal_identity;Pooling=true;" providerName="System.Data.SqlClient" />
     <!--<add name="MsSqlConnectionString" connectionString="server=tartar.netinet.si;uid=zrsz;pwd=zrsz;database=zrsz;Pooling=true;" />-->
     <!-- <add connectionString="Data Source=tartar.netinet.si;Initial Catalog=test7;User ID=test7;Password=izvslf;Pooling=True" name="MsSqlConnectionString" /> -->
-    <add name="MsSqlConnectionString" connectionString="server=kit.renderspace.si;uid=drama;pwd=drama;database=drama;Pooling=true;" />
+    <!-- add name="MsSqlConnectionString" connectionString="server=kit.renderspace.si;uid=drama;pwd=drama;database=drama;Pooling=true;" / -->
+    <add name="MsSqlConnectionString" connectionString="server=tartar.netinet.si;uid=demo;pwd=demo;database=demo;Pooling=true;" />
     <!--<add name="Bamboo" connectionString="server=tartar.netinet.si;uid=zrsz;pwd=zrsz;database=zrsz-custom;Pooling=true;" />-->
     <add name="Bamboo" connectionString="server=kit.renderspace.si;uid=drama;pwd=drama;database=drama-custom;Pooling=true;" />
     <add name="MsSqlConnectionString13" connectionString=";Pooling=true;" />
@@ -148,6 +149,11 @@
       <add path="*.zip" name="zip" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.ai" name="ai" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.swf" name="swf" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
+
+      <add path="*.eot" name="eot" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
+      <add path="*.svg" name="svg" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
+      <add path="*.ttf" name="ttf" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
+      <add path="*.woff" name="woff" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       
       
     <add name="SassAssetHandler" path="*.sass" verb="GET" type="BundleTransformer.SassAndScss.HttpHandlers.SassAndScssAssetHandler, BundleTransformer.SassAndScss" resourceType="File" preCondition="" /><add name="ScssAssetHandler" path="*.scss" verb="GET" type="BundleTransformer.SassAndScss.HttpHandlers.SassAndScssAssetHandler, BundleTransformer.SassAndScss" resourceType="File" preCondition="" /></handlers>
