wory free publish
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@178 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -935,6 +935,7 @@
     <Folder Include="adm\ashx\" />
     <Folder Include="App_Data\" />
     <Folder Include="App_GlobalResources\" />
+    <Folder Include="site_specific\NewFolder1\" />
     <Folder Include="site_specific\_css\" />
   </ItemGroup>
   <ItemGroup>
