--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -448,6 +448,7 @@
       <DependentUpon>Blank.ascx</DependentUpon>
     </Compile>
     <Compile Include="Controls\BreadCrumb.cs" />
+    <Compile Include="Controls\BundleRender.cs" />
     <Compile Include="Controls\GetMeaning.cs" />
     <Compile Include="Controls\JavascriptVars.cs" />
     <Compile Include="Controls\MenuGroup.cs" />
