--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -78,7 +78,7 @@
     <imageOptimisation enabled="false" maxWidth="1000" maxHeight="1000" factor="1" widthParam="w" heightParam="h" />
   </fiftyOne>
   <system.web>
-    <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" uiCulture="en-US" culture="en-US" />
+    <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" uiCulture="en-US" culture="sl-SI" />
     <pages validateRequest="false" enableEventValidation="false" viewStateEncryptionMode="Never" enableViewStateMac="false" controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID">
       <namespaces>
         <add namespace="System.Web.Optimization" />
