local settings to reduce clutter in web.config
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@186 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -817,6 +817,8 @@
     <None Include="BundleTransformer.Configuration.xsd">
       <SubType>Designer</SubType>
     </None>
+    <Content Include="LocalConnectionStrings.config" />
+    <Content Include="LocalAppSettings.config" />
     <None Include="Scripts\jquery-2.1.1.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.1.js" />
     <Content Include="Scripts\jquery-2.1.1.min.js" />
