local settings to reduce clutter in web.config
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@186 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -33,44 +33,8 @@
       <add name="MainRedirect" provider="TURLProvider" />
     </rewrites>
   </urlrewritingnet>
-  <appSettings>
-    <add key="vs:EnableBrowserLink" value="false" />
-    <add key="webpages:Version" value="3.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="WebSiteId" value="2" />
-    <add key="PublishRoleMapping" value="publisher" />
-    <add key="PublishFlag" value="false" />
-    <add key="CacheDuration" value="3600" />
-    <add key="FacebookAppId" value="862156870463013" />
-    <add key="FacebookAppSecret" value="3b42f9b2a5267c59748b79cf52686d8b" />
-    <add key="GoogleClientId" value="326977998446-9msnb40lreglphkldv09dt9frrkelu7b.apps.googleusercontent.com" />
-    <add key="GoogleClientSecret" value="cLsWfI6BLk71OaE1j1aaUK1y" />
-  </appSettings>
-  <connectionStrings>
-    <add name="ProfileSqlConnectionString" connectionString="server=tartar.netinet.si;uid=auth;pwd=auth;database=AuthManager;Pooling=true;" />
-    <add name="DefaultConnection" connectionString="server=tartar.netinet.si;uid=auth;pwd=auth;database=universal_identity;Pooling=true;" providerName="System.Data.SqlClient" />
-    <!--<add name="MsSqlConnectionString" connectionString="server=tartar.netinet.si;uid=zrsz;pwd=zrsz;database=zrsz;Pooling=true;" />-->
-    <!-- <add connectionString="Data Source=tartar.netinet.si;Initial Catalog=test7;User ID=test7;Password=izvslf;Pooling=True" name="MsSqlConnectionString" /> -->
-    <!-- add name="MsSqlConnectionString" connectionString="server=kit.renderspace.si;uid=drama;pwd=drama;database=drama;Pooling=true;" / -->
-    <add name="MsSqlConnectionString" connectionString="server=tartar.netinet.si;uid=demo;pwd=demo;database=demo;Pooling=true;" />
-    <!--<add name="Bamboo" connectionString="server=tartar.netinet.si;uid=zrsz;pwd=zrsz;database=zrsz-custom;Pooling=true;" />-->
-    <add name="Bamboo" connectionString="server=kit.renderspace.si;uid=drama;pwd=drama;database=drama-custom;Pooling=true;" />
-    <add name="MsSqlConnectionString13" connectionString=";Pooling=true;" />
-    <!-- <add name="MsSqlConnectionStringCustom" connectionString="server=tartar.netinet.si;uid=zrsz;pwd=zrsz;database=zrsz-custom;Pooling=true;" />-->
-    <add name="MsSqlConnectionStringCustom" connectionString="server=kit.renderspace.si;uid=drama;pwd=drama;database=drama-custom;Pooling=true;" />
-    <add name="MsSqlConnectionStringCrawler" connectionString="server=tartar.netinet.si;uid=zrsz;pwd=zrsz;database=Crawler;Pooling=true;" />
-    <!-- Baza ZRSZ_JobVacancy -->
-    <add name="eSvetovanje.Entities.Properties.Settings.ZRSZ_KorpoWebConnectionString" connectionString="Data Source=tartar.netinet.si;Initial Catalog=KorpoWeb;Persist Security Info=True;User Id=zrsz;Password=zrsz" providerName="System.Data.SqlClient" />
-    <add name="eSvetovanje.Entities.Properties.Settings.ZRSZ_JobVacancyConnectionString" connectionString="Data Source=tartar.netinet.si;Initial Catalog=zrsz-JobVacancy;Persist Security Info=True;User ID=zrsz;Password=zrsz" providerName="System.Data.SqlClient" />
-    <!-- Glavna baza aplikacije eSvetovanje -->
-    <add name="eSvetovanje.Entities.Properties.Settings.eSvetovanjeConnectionString" connectionString="Data Source=tartar.netinet.si;Initial Catalog=zrsz-eSvetovanje2;Persist Security Info=True;User ID=zrsz;Password=zrsz" providerName="System.Data.SqlClient" />
-    <!-- KorpoWeb -->
-    <add name="eSvetovanje.Entities.Properties.Settings.ESSConnectionString" connectionString="Data Source=tartar.netinet.si;Initial Catalog=zrsz-SkupnaBaza;Persist Security Info=True;User ID=zrsz;Password=zrsz" providerName="System.Data.SqlClient" />
-    <!--<add name="eSvetovanje.Entities.Properties.Settings.ESSConnectionString" connectionString="user id=wds_test;password=wds_test_1234*;data source=cswebrazvoj;initial catalog=SkupnaBaza;packet size=4096" providerName="System.Data.SqlClient"/>-->
-    <add name="eSvetovanje.Kontakti" connectionString="Data Source=tartar.netinet.si;Initial Catalog=zrsz-Kontakti;Persist Security Info=True;User ID=zrsz;Password=zrsz" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <appSettings  file="LocalAppSettings.config"/>
+  <connectionStrings configSource="LocalConnectionStrings.config"/>
   <fiftyOne>
     <redirect firstRequestOnly="true" mobileHomePageUrl="http://zrszm.t.renderspace.net" timeout="20" devicesFile="~/App_Data/Devices.dat" mobilePagesRegex="/(Mobile)/" />
     <log logFile="~/App_Data/Log.txt" logLevel="Info" />
